<resources>
    <string name="action_settings">Settings</string>
    <string name="action_report">Report</string>

    <!-- MainActivity -->
    <!-- End MainActivity -->

    <!--LocationActivity -->
    <string name="title_activity_location">LocationActivity</string>
    <string name="location_dog_guidelines">Dog Guidelines</string>
    <string name="location_wildlife_guidelines">Wildlife Guidelines</string>
    <string name="location_directions">Get Directions</string>
    <!-- End LocationActivity -->

    <!-- AnimalActivity -->
    <string name="animal_basic_info">Basic Information</string>
    <string name="animal_guidelines">Guidelines</string>
    <string name="animal_website_button">View Website</string>
    <!-- End AnimalActivity -->

    <!--SightingActivity -->
    <!-- End SightingActivity -->

    <!-- FeedbackFragment -->
    <string name="feedback_request">We would love to hear from you concerning any suggestions you may have, for example:</string>
    <string name="feedback_1">&#8226; General usability </string>
    <string name="feedback_2">&#8226; Bugs </string>
    <string name="feedback_3">&#8226; Errors (typos, content) </string>
    <string name="feedback_4">&#8226; Feature requests </string>
    <string name="feedback_contact">If you\'d prefer to send an email from a computer, use the following details:</string>
    <string name="feedback_email_address">email:   lrsdev.op@gmail.com</string>
    <string name="feedback_email_subject">subject: Mobile App Feedback</string>
    <string name="feedback_email_button">Email Us</string>
    <!-- End FeedbackFragment -->

    <!-- Navigation drawer -->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string-array name="navigation_array">
        <item>Home</item>
        <item>Map</item>
        <item>Locations</item>
        <item>Sightings</item>
        <item>Wildlife</item>
        <item>Report Wildlife</item>
        <item>Donate</item>
    </string-array>
    <!-- End Navigation Drawer -->

    <!-- DonationFragment -->
    <string name="donation_intro"></string>
    <!-- End DonationFragment -->

    <!-- SafetyFragment -->
    <string name="safety_header">Keep your dog safe on the beach</string>
    <string name="safety_text">Marine wildlife can move surprisingly fast and often have big sharp teeth. You should ensure that you are aware of what’s ahead of you and what your dog might be inclined to sniff around. It is easier to call your dog to you before it has an opportunity to interact with wildlife.</string>
    <string name="safety_todo_header">If you come across wildlife on our beaches:</string>
    <string name="safety_todo_list">  </string>
    <string name="safety_contact_text">Report roaming or uncontrolled dogs to <b>Dunedin City Council, Animal Services 03 477 4000</b>, or Call DOC for sick or injured wildlife</string>
    <!-- End SafetyFragment -->

    <!-- Map MapFragment -->
    <string name="mapbox_access_token">sk.eyJ1IjoiZG9nYmVhY2hlcyIsImEiOiJjaWV3c2NiZ2IwNzVkc2trcXhvdjV4NDIxIn0.XDzJIvDIf_Jkistks-e0yw</string>
    <string name="mapbox_map_id">mapbox.streets-satellite</string>
    <string name="map_change_offline">Show Offline Map</string>
    <string name="map_change_online">Show Online Map</string>
    <string name="map_no_location_alert">We\'re currently unable to determine your location. Centering map on Dunedin, New Zealand.</string>
    <string name="map_offline_alert">"We\'re either unable to determine your location or you're outside the range of the offline map. Centering the map in Dunedin, New Zealand.</string>
    <!-- End MapFragment -->

    <!-- Hotline Telephone Number -->
    <string name="hot">tel:0800362468</string>
    <string name="dcc">tel:03477400</string>

    <!-- Donation Intro -->
    <string name="donate_intro">There are several organisations that are always looking for supporters and donations. If you are able to help in any way visit their websites using the buttons below.</string>
</resources>

